--- a/C#Basics/C#Basics/C#Basics.csproj
+++ b/C#Basics/C#Basics/C#Basics.csproj
@@ -32,6 +32,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>C_Basics.AnimalRescue.Program</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnimalRescue\Program.cs" />
     <Compile Include="Calculator.cs" />
     <Compile Include="LogicalOp.cs" />
     <Compile Include="PrLists.cs" />
