Trying Git from Visual Studio

--- a/C#Basics/C#Basics/C#Basics.csproj
+++ b/C#Basics/C#Basics/C#Basics.csproj
@@ -33,7 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>C_Basics.AnimalRescue.Program</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <NoWin32Manifest>true</NoWin32Manifest>
@@ -49,7 +50,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnimalRescue\Program.cs" />
     <Compile Include="Calculator.cs" />
     <Compile Include="LogicalOp.cs" />
     <Compile Include="PrLists.cs" />
