--- a/C#Basics/AnimalRescue/AnimalRescue.csproj
+++ b/C#Basics/AnimalRescue/AnimalRescue.csproj
@@ -57,6 +57,7 @@
     <Compile Include="AnimalFood.cs" />
     <Compile Include="Cat.cs" />
     <Compile Include="Dog.cs" />
+    <Compile Include="DogFood.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
