--- a/C#Basics/AnimalRescue/AnimalRescue.csproj
+++ b/C#Basics/AnimalRescue/AnimalRescue.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RehabilitationActivity.cs" />
+    <Compile Include="VetAssistant.cs" />
     <Compile Include="Veterinarian.cs" />
   </ItemGroup>
   <ItemGroup>
